Started excluded sublattices.

--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -46,7 +46,7 @@
 \newcommand{\Proj}{\ensuremath{\operatorname{Proj}}}
 \newcommand{\arity}{\ensuremath{\operatorname{arity}}}
 \newcommand{\Op}{\ensuremath{\operatorname{Op}}}
-\renewcommand{\alg}[1]{\ensuremath{\mathbf{#1}}}
+%\renewcommand{\alg}[1]{\ensuremath{\mathbf{#1}}}
 \newcommand{\Sub}{\ensuremath{\operatorname{Sub}}}
 %% \newcommand{\Con}{\ensuremath{\operatorname{Con}}}
 \newcommand{\body}{\ensuremath{\operatorname{Body}}}
