--- a/nsjom/loc-diff-terms-nsjom.tex
+++ b/nsjom/loc-diff-terms-nsjom.tex
@@ -1584,7 +1584,7 @@ $t(x,y,z) = y$.
 To compute a local difference term operation for the set
 $\{(a_0,b_0,0), (a_1, b_1, 1)\}$,
 \begin{enumerate}
-\item compute $\theta_0:=\com{\Cg^{\alg{A}}(a_0, b_0)}$;
+\item compute $\theta_0:=\Com{\Cg^{\alg{A}}(a_0, b_0)}$;
 \item form $C_0:= a_0/\theta_0 \times \{b_1\}$
       (a subuniverse of $\alg{A}\times\alg{A}$ by idempotence);
 \item compute
@@ -1600,9 +1600,12 @@ $\{(a_0, b_0, 0), (a_1, b_1, 1)\}$.
 
 \noindent \underline{\textbf{Subroutine 10}}\\[4pt]
 To compute a local difference term operation for the set
-$\{(a_0,b_0,1), (a_1, b_1, 0)\}$,
+$\{(a_0,b_0,1), (a_1, b_1, 0)\}$, well, this is obviously symmetric to
+the situation handled by Subroutine 01.  Nonetheless, we include the
+listing here so that we can easily refer to this version of the algorithm
+later.
 \begin{enumerate}
-\item compute $\theta_1:=\com{\Cg^{\alg{A}}(a_1, b_1)}$;
+\item compute $\theta_1:=\Com{\Cg^{\alg{A}}(a_1, b_1)}$;
 \item form $C_1:= \{b_0\}\times a_1/\theta_1$
       (a subuniverse of $\alg{A}\times\alg{A}$ by idempotence);
 \item compute
@@ -1628,7 +1631,7 @@ For sets of size three, there are only two other cases to consider
 (since the other cases are symmetric to these two).
 They are
 $\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 0)\}$ and
-$\{(a_0, b_0, 1), (a_1, b_1, 0), (a_2, b_2, 1)\}$.
+$\{(a_0, b_0, 0), (a_1, b_1, 1), (a_2, b_2, 1)\}$.
 
 \smallskip
 
@@ -1636,24 +1639,81 @@ $\{(a_0, b_0, 1), (a_1, b_1, 0), (a_2, b_2, 1)\}$.
 To find a local difference term operation for
 $\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 0)\}$,
 \begin{enumerate}
-\item compute $t_0$, a local difference term for
-$\{(a_0, b_0, 0), (a_1, b_1, 1)\}$ using Subroutine 01.
-\item compute $t_1$, a local difference term for
-$\{(a_1, b_1, 1),  (a_2, b_2, 0)\}$, using
+\item compute $t$, a local difference term for
+$\{(a_0, b_0, 0), (a_1, b_1, 1)\}$ using Subroutine 01;
+\item compute $s$, a local difference term for
+$\{(a_1, b_1, 1),  (a_2, t(a_2,b_2,b_2), 0)\}$, using
 Subroutine 10.
 \end{enumerate}
-
+\noindent {\bf Claim:} The term
+$d(x,y,z) = s(x, t(x,y,y), t(x,y,z))$
+is a local difference term for
+$\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 0)\}$.
+\begin{proof}
+First observe that
+$d(a_0, b_0, b_0)=s(a_0, t(a_0,b_0,b_0), t(a_0,b_0,b_0))$, and the latter is
+congruent to $s(a_0, a_0, a_0) = a_0$ modulo $\Com{\Cg(a_0, b_0)}$.
+Next,
+\[
+d(a_1, a_1, b_1)
+=s(a_1, t(a_1,a_1, a_1), t(a_1,a_1,b_1))
+=s(a_1, a_1, b_1) = b_1.\]
+Finally, $d(a_2, b_2, b_2)=s(a_2, t(a_2,b_2,b_2), t(a_2,b_2,b_2))$
+and the latter is congruent to $a_2$ modulo
+$\Comr{\Cg(a_2, t(a_2,b_2,b_2))}$.
+By idempotence,
+\[\Cg(a_2, t(a_2,b_2,b_2)) =
+\Cg(t(a_2,a_2,a_2), t(a_2,b_2,b_2))
+\leq \Com{\Cg(a,b)}.\]
+% and the pair $(t(a_2,a_2,a_2), t(a_2,b_2,b_2))$
+% clearly belongs to $\Cg(a_2,b_2)$.
+% Therefore, $\Cg(a_2, t(a_2,b_2,b_2)) \leq \Cg(a_2,b_2)$.
+By monotonicity of the commutator,
+$d(a_2, b_2, b_2)\Comr{\Cg(a_2, b_2)} a_2$, as desired.
+\end{proof}
 \medskip
 
-...to be continued...
-
-\medskip
-
-\noindent \underline{\textbf{Subroutine 101}}\\[4pt]
+\noindent \underline{\textbf{Subroutine 011}}\\[4pt]
 To find a local difference term operation for
-$\{(a_0, b_0, 1), (a_1, b_1, 0),  (a_2, b_2, 1)\}$,
+$\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 1)\}$,
+\begin{enumerate}
+\item compute $t$, a local difference term for
+$\{(a_0, b_0, 0), (a_1, b_1, 1)\}$ using Subroutine 01;
+\item compute $s$, a local difference term for
+$\{(a_0, b_0, 0),  (t(a_2,a_2,b_2), b_2, 1)\}$, using
+Subroutine 01.
+\end{enumerate}
+\noindent {\bf Claim:} The term
+%%%
+$d(x,y,z) = s(t(x,y,z), t(y,y,z),z)$
+%%%
+is a local difference term for
+$\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 1)\}$.
 
-\medskip
+\begin{proof}
+First observe that
+$d(a_0, b_0, b_0)=
+s(t(a_0,b_0,b_0), t(b_0,b_0,b_0), b_0)$,
+and the latter is congruent to $s(a_0, b_0, b_0) = a_0$ modulo
+$\Com{\Cg(a_0, b_0)}$. Next,
+\[
+d(a_1, a_1, b_1)
+=s(a_1, t(a_1,a_1, a_1), t(a_1,a_1,b_1))
+=s(a_1, a_1, b_1) = b_1.\]
+Finally,
+$d(a_2, b_2, b_2)=s(a_2, t(a_2,b_2,b_2), t(a_2,b_2,b_2))$
+and the latter is congruent to $a_2$ modulo
+$\Comr{\Cg(a_2, t(a_2,b_2,b_2))}$.
+By idempotence,
+\[\Cg(a_2, t(a_2,b_2,b_2)) =
+\Cg(t(a_2,a_2,a_2), t(a_2,b_2,b_2))
+\leq \Com{\Cg(a,b)}.\]
+% and the pair $(t(a_2,a_2,a_2), t(a_2,b_2,b_2))$
+% clearly belongs to $\Cg(a_2,b_2)$.
+% Therefore, $\Cg(a_2, t(a_2,b_2,b_2)) \leq \Cg(a_2,b_2)$.
+By monotonicity of the commutator, it follows that
+$d(a_2, b_2, b_2)\Comr{\Cg(a_2, b_2)} a_2$, as desired.
+\end{proof}
 
 ...to be continued...
 
