Put in the proofs; still needs notation fixing.

--- a/DiffTerm/inputs/rflatexmacs.sty
+++ b/DiffTerm/inputs/rflatexmacs.sty
@@ -207,3 +207,25 @@
 \newcommand{\Se}{\SS^{\prec}}
 \newcommand{\urt}{\sqrt[\text{\emphslb{u}}]}
 
+% Matt's version but I don't see why this
+% should be in math
+%\DeclareMathOperator{\otyp}{\mathbf{0}}% unary
+%\DeclareMathOperator{\utyp}{\mathbf{1}}% unary
+%\DeclareMathOperator{\atyp}{\mathbf{2}}% affine
+%\DeclareMathOperator{\btyp}{\mathbf{3}}% boolean
+%\DeclareMathOperator{\ltyp}{\mathbf{4}}% lattice
+%\DeclareMathOperator{\styp}{\mathbf{5}}% semilattice
+%\DeclareMathOperator{\ityp}{\mathbf{i}}
+%\DeclareMathOperator{\jtyp}{\mathbf{j}}
+%
+\newcommand{\otyp}{\textbf{0}}
+\newcommand{\utyp}{\textbf{1}}
+\newcommand{\atyp}{\textbf{2}}
+\newcommand{\btyp}{\textbf{3}}
+\newcommand{\ltyp}{\textbf{4}}
+\newcommand{\styp}{\textbf{5}}
+\newcommand{\ityp}{\textbf{i}}
+\newcommand{\jtyp}{\textbf{j}}
+
+
+
