--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -164,7 +164,7 @@ MRREVIEWER = {Konrad P. Pi{\'o}ro},
   MRNUMBER = {0434928 (55 \#7891)},
 MRREVIEWER = {James B. Nation},
 }
-  @BOOK{HM:1988,
+@BOOK{HM:1988,
     AUTHOR = {Hobby, David and McKenzie, Ralph},
     TITLE = {The structure of finite algebras},
     SERIES = {Contemporary Mathematics},
@@ -480,8 +480,8 @@ The central question motivating this project is the following:
   idempotent algebra $\alg{A}$ if $\bbV(\alg{A})$ has a difference term.
 \end{prob}
 Kearnes proved in~\cite{MR1358491} that $\alg{A}$ has a difference term iff
-$\bbV(\alg{A})$ has a Taylor term and no type-2 tails
-(equivalently, $\bbV(\alg{A})$ has no 1's and no type-2 tails).
+$\bbV(\alg{A})$ has a Taylor term and no type-\atyp\ tails
+(equivalently, $\bbV(\alg{A})$ has no 1's and no type-\atyp\ tails).
 No 1's is poly-time decidable by Valeriote's subtype theorem.
 In~\cite{Freese:2009}, Freese and Valeriote solved an analogous problem, by
 giving a positive answer to the following
@@ -502,15 +502,16 @@ Using this it is proved that deciding \cm is polynomial-time.
 But the proof of the no tails part uses that in a variety with no 1's or 5's,
 the congruence lattice modulo the {\it solvability congruence} (defined below)
 is (join) semidistributive.
-Now, restricting to just testing no type-2 tails (vs no tails of any type) is
+Now, restricting to just testing no type-\atyp\ tails (vs no tails of any type) is
 not a problem. So, for example, there is a poly-time algorithm for testing if
-$\bbV(\alg{A})$ has no 1's, no 5's and no type-2 tails.  
+$\bbV(\alg{A})$ has no 1's, no 5's and no type-\atyp\ tails.  
 
 Here is a related problem.
 \begin{prob}
   \label{prob:3}
   Is there an $\alg{A}$, idempotent and having a Taylor term, no type-2 tail in 
-  subalgebras of $\alg{A}^k$, for $k < n$, but having a type-2 tail in a subalgebra
+  subalgebras of $\alg{A}^k$, for $k < n$, but having a type-\atyp\ 
+  tail in a subalgebra
   of $\alg{A}^n$. 
 \end{prob}
 Perhaps we could construct such an algebra using congruence lattice
@@ -596,7 +597,8 @@ algebra with no non-trivial subalgebras.)
 \begin{prop}[Prop.~2.1~\cite{Freese:2009}]
   \label{prop:2.1}
 If A is a finite idempotent algebra and $i \in \typ(\bbV(\alg{A}))$ then there
-is a finite strictly simple algebra $\bS$ of type $j$ for some $j \leq i$ in $\sansH \sansS (\alg{A})$.
+is a finite strictly simple algebra $\bS$ of type~\jtyp for 
+some $j \leq i$ in $\sansH \sansS (\alg{A})$.
 If
 \begin{enumerate}[(1)]
 \item 
@@ -688,8 +690,10 @@ idempotent algebra generates a \cm variety.
 According to the characterization
 in~\cite[Ch.~8]{HM:1988} of locally finite congruence modular (resp.,
 distributive) varieties, a finite algebra $\alg{A}$ generates a congruence modular
-(resp., distributive) variety $\sV$ if and only if the typeset of $\sV$ is
-contained in $\{2, 3, 4\}$ (resp., $\{3, 4\}$) and all minimal sets of prime
+(resp., distributive) variety $\sV$ if and only if the typeset 
+of $\sV$ is
+contained in $\{\atyp, \btyp, \ltyp\}$ (resp., $\{\btyp, \ltyp\}$) 
+and all minimal sets of prime
 quotients of finite algebras in $\sV$ have empty
 tails~\cite[Def.~2.15]{HM:1988}. Note that in the distributive 
 case the empty tails condition is equivalent to the minimal sets all having exactly
@@ -697,14 +701,19 @@ two elements.
 
 It follows from Corollary~\ref{cor:2.2} and Proposition~\ref{prop:2.1}
 that if $\alg{A}$ is idempotent then one can
-test the first condition, on omitting types 1 and 5 (or 1, 2, and 5) by searching
-for a 2-generated subalgebra of $\alg{A}$ whose typeset is not contained in
-$\{2, 3, 4\}$ ($\{3, 4\}$). It is proved in~\cite[Sec.~6]{Freese:2009} that this
-test can be performed in polynomial time---that is, the running time of the test
+test the first condition, on omitting 
+types \utyp\ and \styp\ (or \utyp, \atyp, and \styp) by searching
+for a 2-generated subalgebra of $\alg{A}$ whose typeset is 
+not contained in
+$\{\atyp, \btyp, \ltyp\}$ ($\{\btyp, \ltyp\}$). It is proved 
+in~\cite[Sec.~6]{Freese:2009} that this
+test can be performed in polynomial time---that is, the running 
+time of the test
 is bounded by a polynomial function of the size of $\alg{A}$.
 In~\cite[Sec.~3]{Freese:2009}, Freese and Valeriote prove a sequence of
 lemmas to establish that, if $\alg{A}$ is finite and idempotent, and if
-$\mathcal V = \bbV(\alg{A})$ omits types 1 and 5, then to test for the existence of tails
+$\mathcal V = \bbV(\alg{A})$ omits types \utyp\ and \styp, 
+then to test for the existence of tails
 in $\sV$ it suffices to look for them 
 in the 3-generated subalgebras of $\alg{A}^2$.
 %% More specifically, the authors assume that the type set of $\bbV(\alg{A})$ contains no 1's
@@ -727,9 +736,11 @@ modular variety is tractable.\footnote{That is, there are positive integers
 Our goal is to use the same strategy to solve Problem~\ref{prob:1}.
 As such, we revisit each lemma in Section 3 of \cite{Freese:2009},
 and consider whether it can be proved under modified hypotheses.
-Specifically, we continue to assume that the type set of $\bbV(\alg{A})$ contains no 1's,
-but we will now drop the ``no 5's'' assumption.  We will attempt to prove that
-either there are no \emph{type-2} tails in $\bbV(\alg{A})$, or else \emph{type-2}
+Specifically, we continue to assume that the type set of $\bbV(\alg{A})$ contains no \utyp's,
+but we will now drop the ``no \styp's'' assumption.  We will 
+attempt to prove that
+either there are no \emph{type-\atyp} tails in $\bbV(\alg{A})$, 
+or else \emph{type-\atyp}
 tails can be found ``quickly,'' (e.g., in a 3-generated subalgebra of $\alg{A}^2$).
 We continue to quote~\cite{Freese:2009} where possible,
 while modifying the assumptions and adjusting the arguments as necessary.
@@ -740,16 +751,16 @@ Throughout, we let $\nn$ denote the set $\{0,1,\dots, n-1\}$ and
 set of finite,
 similar, idempotent algebras, closed under the taking of 
 subalgebras, such that
-$\sV = \bbV(\sS)$ omits 1 (but may include type 5).
-If there is a finite algebra in $\sV$ having a type 2 minimal set 
+$\sV = \bbV(\sS)$ omits type-\utyp\ (but may include type-\styp).
+If there is a finite algebra in $\sV$ having a type-\atyp\ minimal set 
 having a tail, then, by standard tame congruence theory, there
 is such an algebra which is a subalgebra of a product 
 of elements
-in $\sS$ have a type~2 minimal set with a tail. So we
+in $\sS$ have a type-\atyp\ minimal set with a tail. So we
 suppose that some finite algebra
 $\alg{B}$ in $\sV$ has a prime quotient whose minimal sets 
 have non-empty
-\emph{type-2} tails and show that there is a 3-generated 
+\emph{type-\atyp} tails and show that there is a 3-generated 
 subalgebra of the
 product of two members of $\sS$ with this property.
 
@@ -758,25 +769,80 @@ we may assume that the algebra $\alg{B}$ from the previous paragraph is a subdir
 product of a finite number of members of $\sS$. Choose $n$ minimal such that for
 some $\alg{A}_0$, $\alg{A}_1$, $\dots$, $\alg{A}_{n-1}$ in $\sS$, there is a subdirect
 product $\alg{B} \sdp \prod_{\nn} \alg{A}_i$
-that has a prime quotient with non-empty type-2 tails.
-Under the assumption that $n > 1$ we will attempt to prove that $n = 2$.
+that has a prime quotient of type~\atyp\ whose minimal sets have
+non-empty type-2 tails.
+Under the assumption that $n > 1$ we will prove that $n = 2$.
 
 For this $n$, select the $\alg{A}_i$ and $\alg{B}$ so that $|B|$ is as small as possible.
-Let $\alpha \prec \beta$ be a prime quotient of $\alg{B}$ with non-empty
-type-2 tails and choose $\beta$ minimal with this property.
-Let $U$ be an $(\alpha, \beta)$-minimal set and let $N$ be an
- $(\alpha, \beta)$-trace of $U$. Let 0 and 1 be
-two distinct members of $N$ with $(0, 1) \notin \alpha$.
+Let $\alpha \prec \beta$ be a prime quotient of $\alg{B}$ 
+of type~\atyp\ such that its minimal sets have
+non-empty tails, and choose $\beta$ minimal with this property.
+By \cite[Lemma 6.2]{HM:1988} this implies $\beta$ is join 
+irreducible and $\alpha$ is its unique subcover.
+Let $U$ be an $(\alpha, \beta)$-minimal set. 
+
+%and let $N$ be an
+% $(\alpha, \beta)$-trace of $U$. Let 0 and 1 be
+%two distinct members of $N$ with $(0, 1) \notin \alpha$.
 
 \begin{lemma}[{\protect cf.~\cite[Lem.~3.1]{Freese:2009}}]
-  \label{lem:fv_3-1}
-  Let $t$ be a member of the tail of $U$. Then $\beta$ is the congruence of $\alg{B}$
-  generated by the pair $(0, 1)$ and $\alg{B}$ is generated by $\{0, 1, t\}$.
+\label{lem:fv_3-1}
+If $0$, $1 \in U$ such that $(0,1) \in \beta - \alpha$ and
+$t$ be a member of the tail of $U$. Then $\beta$ is the 
+congruence of $\alg{B}$
+generated by the pair $(0,1)$ and $\alg{B}$ is generated 
+by $\{0, 1, t\}$.
 \end{lemma}
-It seems the proof of~\cite[Lem.~3.1]{Freese:2009} goes through with only minor
-adjustments. % to prove Lemma~\ref{lem:fv_3-1}.
+
 \begin{proof}
-  {\bf TODO:} fill in proof of  Lemma~\ref{lem:fv_3-1}.
+Since $\beta$ is join irreducible with unique subcover $\alpha$, any
+pair of elements in $\beta \setminus \alpha$ generates $\beta$.
+
+Let $\alg C$ be the subalgebra of $\alg B$ generated by $\{0,1,t\}$. We
+will obtain a contradiction under the assumption that $|C| < |B|$
+and the minimal sets of $\alg C$ which have type~\atyp\ all 
+have empty tails. Let $\beta'$
+and $\alpha'$ be the restrictions of $\beta$ and $\alpha $ to $C$,
+respectively. Then $\alpha' < \beta'$ since $(0,1) \in
+\beta'\setminus \alpha'$ and so there are $\delta \covs \gamma$ in
+$\con{\alg C}$ with $\alpha' \le \delta \cov \gamma \le \beta'$ and
+such that $(0,1) \in \gamma\setminus \delta$.
+
+Since $(\alpha,\beta)$ is type~2, $\beta$ is abelian over $\alpha$.
+This implies $\beta'$ is abelian over $\alpha'$, (add a ref??) 
+which implies the
+types of the prime quotients occurring between $\alpha'$ and $\beta'$
+are~\utyp\ or \atyp.
+But since we are assuming $\alg B$ has a Taylor term,
+they are all of type~\atyp. 
+In particular, $(\delta,\gamma)$ has type~\atyp.
+
+Suppose that $|C| < |B|$ and all $\langle \delta, \gamma \rangle$
+minimal sets have empty tails. Let $V$ be a $\langle \delta,\gamma
+\rangle$ minimal set and let $p(x)$ be some polynomial of $\alg C$
+with range $V$ and with $(p(0) ,p(1))\notin \delta$. Such a
+polynomial exists by Theorem~2.8 of~\cite{HM:1988}
+since $(0,1) \in \gamma\setminus \delta$.
+
+The polynomial $p(x)$ can be expressed in the form 
+$s^{\alg C}(x,0,1,t)$ for some term $s(x,y,z,w)$ 
+of $\mathcal V$ and so extends to
+a polynomial $p'(x) = s^{\alg B}(x,0,1,t)$ of $\alg B$.  Since $(p(0),
+p(1)) \in \gamma\setminus \delta$ then $(p'(0), p'(1)) \in
+\beta\setminus \alpha$ and so $p'$ must map the minimal set $U$ onto
+a polynomially isomorphic set $W$.   
+
+Since the type of $\langle \delta, \gamma \rangle$ is \atyp\ 
+and $V$ has no tail,   
+$\alg C|_V$ has a Maltsev polynomial $s(x,y,z)$. 
+Since $\{p(0), p(1),p(t)\} \subseteq V$ and 
+since this polynomial has an extension to a
+polynomial of $\alg B$ it follows that there is a polynomial
+$f(x,y,z)$ of $\alg B$ that satisfies the Maltsev identities when
+restricted to the set $\{p'(0), p'(1), p'(t)\} \subseteq W$. This
+contradicts Lemma~4.26 of~\cite{HM:1988}, since $p'(0)$ and $p'(1)$
+are in the body of $W$ and $p'(t)$ is in the tail, since $p'$ is a
+polynomial isomorphism from $U$ to~$W$.
 \end{proof}
 
 
@@ -806,7 +872,38 @@ $\emptyset \subset \sigma\subset \nn$
   either $\beta \leq \rho_\sigma$ or $\alpha \join \rho_\sigma = 1_B$.
 \end{lemma}
 \begin{proof}
-  {\bf TODO:} fill in proof of  Lemma~\ref{lem:fv_3-2}.
+Suppose that $\beta \not\le {\rho}$ (or equivalently $(0,1) \notin
+\rho$). Since $\beta$ is join irreducible, $\beta\meet\rho \le
+\alpha$ and so $\beta\meet \rho = \alpha \meet \rho$.  Furthermore,
+$\alpha\join {\rho} = \beta \join {\rho}$, or else we can find a
+prime quotient between these two congruences that is perspective
+with $\langle \alpha, \beta \rangle$.  But then the algebra 
+$\alg B/{\rho}$ has a prime quotient of type~\atyp\ whose minimal sets have non-empty
+tails.  Since this algebra is isomorphic to a subdirect product of
+fewer than $n$ members of $\mathcal S$, we conclude, by the minimality 
+of~$n$, that indeed $\alpha\join {\rho} = \beta \join {\rho}$.
+
+Thus the set
+\[
+\mathcal P = \{\beta\meet\rho, \rho, \alpha, \beta, \alpha\join\rho\}
+\]
+forms a pentagon in $\Con \alg B$. Let $C$ be the
+$(\alpha\join\rho)$-class that contains $0$ and let $M = C\mathrel{\cap} U$.
+Note that $C$ contains $1$ and, since $\alg B$ is idempotent,  that
+$C$ is a subuniverse of $\alg B$. By Lemma 2.4 of \cite{HM:1988}, we
+conclude that the restriction to $M$ is a surjective lattice
+homomorphism from the interval $I[0_B,
+\alpha\join\rho]$ in $\Con{\alg B}$ to the interval $I[0_M,
+(\alpha\join\rho)|_M]$ in $\Con{\alg B}|_M$.  Note that since $(0,1) \in
+\beta|_M \setminus \alpha|_M$, this restriction map separates
+$\alpha$ and $\beta$.  Then, the image under the restriction map of
+the pentagon $\mathcal P$ is a pentagon in $\Con{\alg B}|_M$.  This
+implies that $M$ contains some elements of the tail of $U$, since
+otherwise $\Con{\alg B}|_M$ has a Maltsev term operation and hence  
+is modular.
+Thus, there is some $t$ in the tail of $U$ with $(0,t) \in
+\alpha\join \rho$. Using Lemma~\ref{lem:fv_3-1} we conclude that $C =
+B$ since it contains $\{0,1,t\}$.  Thus, $\alpha \join \rho = 1_B$.
 \end{proof}
 
 \begin{lemma}[{\protect cf.~\cite[Lem.~3.3]{Freese:2009}}]
@@ -842,7 +939,7 @@ Therefore, $\beta \join \rho_\sigma = 1_B$.
 \smallskip
 
 \noindent {\bf Subclaim:}
-For all nonempty proper subsets $\sigma \subset n$,
+For all nonempty proper subsets $\sigma \subset \nn$,
 for all $c\in \body(U)$ and all $v\in B$, we have
 $(c, v) \in \beta \circ \rho_\sigma \cap \rho_\sigma \circ \beta$.
 
@@ -961,41 +1058,29 @@ Since this hold for every~$i$, $d(b,t,t) = b$.
 %\end{proof}
 
 
-\begin{theorem}[Thm.~3.4~\cite{Freese:2009}]
-  \label{thm:fv_3-4}
-  Let $\sV$ be the variety generated by some finite set $\sS$ of finite,
-  idempotent algebras that is closed under taking subalgebras. If $\sV$
-  omits type 1 \sout{and 5} and some finite member of $\sV$ has a prime quotient
-  whose minimal sets have non-empty \underline{type-2} tails then there is some
-  3-generated algebra B with this property that belongs to $\sS$ or is a subdirect
-  product of two algebras from $\sS$. 
+\begin{theorem}[Thm.~3.4~\cite{Freese:2009}]\label{thm:fv_3-4}
+Let $\sV$ be the variety generated by some finite set $\sS$ of finite,
+idempotent algebras that is closed under taking subalgebras. If\/ $\sV$
+omits type~\utyp\ and some finite member of $\sV$ has a prime quotient 
+of type~\atyp\
+whose minimal sets have non-empty tails, then there is some
+3-generated algebra $\alg B$ with this property that belongs to $\sS$ or is a subdirect
+product of two algebras from $\sS$. 
 \end{theorem}
 \begin{proof}
-  {\bf TODO:} fill in proof of Theorem~\ref{thm:fv_3-4}.
+Choose $n > 0$, $\alg A_i \in \sS$, for $0 \le i \le n-1$ and $\alg B$
+as above. From Lemma \ref{lem:fv_3-1} we know that $\alg B$ is
+3-generated. If $n > 1$ then by the previous lemma we can choose $i$
+and $j \le n$ with $\beta \le \rho_i$ and $\alpha \join \rho_j =
+1_B$. If $n > 2$ then Lemma~\ref{lem:fv_3-2} applies to $\rho = \rho_i
+\meet \rho_j$ and so we know that either $\beta \le \rho$ or $\alpha
+\join \rho = 1_B$. This yields a contradiction as the former is not
+possible, since $\beta \not\le \rho_j$ and the latter can't hold
+since both $\alpha$ and $\rho$ are below $\rho_i$.
+
+So, the minimality of $n$ forces $n\le 2$ and the result follows.
 \end{proof}
 
-\section{Excluded Lattices}
-
-\begin{theorem}
-Let $\alg A$ be a finite algebra with a Taylor term. Then 
-$\Con(\alg{A})$ does not have congruences 
-$\alpha$, $\beta$, $\rho_0, \ldots, \rho_{n-1}$
- satisfying
-\begin{enumerate}
-\item
-$\Meet \rho_i = 0_{\alg A}$,
-\item
-$\beta$ is join irreducible,
-\item 
-$\alpha \cov \beta$ is a prime quotient of type 2, and
-\item
-$\alpha \join \rho_i = 1_{\alg A}$.
-\end{enumerate}
-\end{theorem}
-
-\begin{proof}
-Testing $\Con \alg A$, $\Con{(\alg A)}$, 
-\end{proof}
 
 
 %\bibliographystyle{amsplain} %% or amsalpha
