initial commit and minor mod

--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -477,7 +477,7 @@ The central question motivating this project is the following:
 \begin{prob}
   \label{prob:1}
   Is there a polynomial-time algorithm to decide for a finite,
-  idempotent algebra $\alg{A}$ if $\bbV(\alg{A})$ has a difference term.
+  idempotent algebra $\alg{A}$ if $\bbV(\alg{A})$ has a difference term?
 \end{prob}
 Kearnes proved in~\cite{MR1358491} that $\alg{A}$ has a difference term iff
 $\bbV(\alg{A})$ has a Taylor term and no type-\atyp\ tails
