--- a/DiffTerm/inputs/refs.bib
+++ b/DiffTerm/inputs/refs.bib
@@ -64,7 +64,7 @@ MRREVIEWER = {M. G. Stone},
        URL = {http://dx.doi.org/10.1142/S0218196798000247},
 }
 @article{KSW,
-title = {Simpler maltsev conditions for (weak) difference terms in locally finite varieties},
+title = {Simpler {M}altsev conditions for (weak) difference terms in locally finite varieties},
 author = {Kearnes, Keith and Szendrei, \'{A}gnes and Willard, Ross},
 note = {to appear}
 }
@@ -147,7 +147,7 @@ MRREVIEWER = {Konrad P. Pi{\'o}ro},
   MRNUMBER = {0434928 (55 \#7891)},
 MRREVIEWER = {James B. Nation},
 }
-  @BOOK{HM:1988,
+@BOOK{HM:1988,
     AUTHOR = {Hobby, David and McKenzie, Ralph},
     TITLE = {The structure of finite algebras},
     SERIES = {Contemporary Mathematics},
